--- a/MyMusic/src/main/resources/application.properties
+++ b/MyMusic/src/main/resources/application.properties
@@ -28,3 +28,4 @@ spring.jpa.show-sql=true
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.database-platform=com.ciandt.summit.bootcamp2022.infra.config.SqlDialect
+spring.profiles.active=dev
