--- a/MyMusic/pom.xml
+++ b/MyMusic/pom.xml
@@ -113,6 +113,12 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<version>0.8.8</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -140,6 +146,38 @@
 					<source>11</source>
 					<target>11</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.8</version>
+				<configuration>
+					<excludes>
+						<exclude>com/ciandt/summit/bootcamp2022/application/adapters/controllers/exceptions/**</exclude>
+						<exclude>com/ciandt/summit/bootcamp2022/application/dtos/**</exclude>
+						<exclude>com/ciandt/summit/bootcamp2022/config/**</exclude>
+						<exclude>com/ciandt/summit/bootcamp2022/exceptions/**</exclude>
+						<exclude>com/ciandt/summit/bootcamp2022/infra/config/**</exclude>
+						<exclude>com/ciandt/summit/bootcamp2022/infra/adapters/entities/**</exclude>
+						<exclude>com/ciandt/summit/bootcamp2022/infra/adapters/repositories/**</exclude>
+						<exclude>com/ciandt/summit/bootcamp2022/domain/**</exclude>
+						<exclude>com/ciandt/summit/bootcamp2022/domain/dtos/**</exclude>
+					</excludes>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
