--- a/MyMusic/pom.xml
+++ b/MyMusic/pom.xml
@@ -119,6 +119,13 @@
 			<version>0.8.8</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.11</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
